# Iterated-Graph-Systems

./: README.md  pyproject.toml
EIGS/: EIGS.py  __init__.py
examples/: basic_usage.py
iterated_graph_systems/: __init__.py
