[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iterated-graph-systems"
version = "0.1.0"
description = "Edge-based Iterated Graph Systems and bond percolation visualisation."
readme = "README.md"
authors = [
    { name = "Nero", email = "neroziyuli@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "networkx>=2.8",
    "matplotlib>=3.5",
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/Nero-17/Iterated-Graph-Systems"

[tool.setuptools.packages.find]
where = ["."]
include = ["iterated_graph_systems*"]
exclude = ["examples*"]
